# tsr

./: Cargo.toml  README.md  main.tsx
lexer/: Cargo.toml
lexer/src/: delimiters.rs  globals.rs  lib.rs  literal.rs  operators.rs  punctuation.rs  reserved.rs  token.rs  tokens.rs  util.rs
macro/: Cargo.toml
macro/src/: attributes.rs  lib.rs
parser/: Cargo.toml
parser/src/: ast.rs  lib.rs  tags.rs
parser/src/parsing/: mod.rs  signatures.rs  statement.rs  types.rs
parser/src/parsing/statement/: class.rs  enumeration.rs  export.rs  expression.rs  function.rs  if_else.rs  import.rs  interface.rs  returning.rs  type_alias.rs  variable.rs
parser/src/parsing/statement/expression/: array.rs  arrow_function.rs  call.rs  code_block.rs  index.rs  new.rs  primitives.rs  simple_binary.rs  switch.rs
runtime/: Cargo.toml
runtime/src/: environment.rs  lib.rs
runtime/src/api/: events.rs  mod.rs  reflection.rs  util.rs
runtime/src/eval/expression/: array.rs  arrow_function.rs  binary.rs  call.rs  index.rs  literal.rs  mod.rs  new.rs  switch.rs
runtime/src/eval/statement/: class.rs  enumeration.rs  export.rs  function.rs  if_else.rs  import.rs  interface.rs  mod.rs  type_alias.rs  variable.rs
runtime/src/value/: builders.rs  mod.rs  native.rs
tests/: Cargo.toml  lexer.rs  parser.rs  runtime.rs
