[package]
name = "tsr-runtime"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"
owo-colors = "4.0.0"
safer_owning_ref = "0.5.0"
tsr-lexer = { version = "0.0.0", path = "../lexer" }
tsr-macro = { version = "0.1.0", path = "../macro" }
tsr-parser = { version = "0.0.0", path = "../parser" }
